[package]
name = "nand2tetris-hdl-parser-node"
version = "0.1.0"
authors = ["Teddy Heinen <teddy@heinen.dev>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nand2tetris_hdl_parser_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
neon = "0.6.0"
nand2tetris-hdl-parser = { git = "https://github.com/tcheinen/nand2tetris-hdl-parser", branch = "serde" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"